Bug 1259305 - If nsHttpChannel has been suspended before divert to parent starts, suspend message diversion. r=mayhemer